--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       name="description"
       content="Ticketnetwork Trends Tracker for Google Trends"
     />
-    <link rel="icon" href="/public/favicon.ico" type="x-icon" />
+    <link rel="icon" href="public/favicon.ico" type="x-icon" />
     <style>
       :root {
         --color-primary: #0077ff;
